<resources>
    <string name="app_name">Gestion Clientes</string>
    <string name="title_activity_drawer">Gestion Clientes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_headertitle">Gestion Clientes</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="textViewCustomerControl">CONTROL CLIENTES APP</string>
    <string name="textViewNuevoTour">Crear Tour Venta</string>
    <string name="telefono_Cliente">Telefono</string>
    <string name="textViewZonaVenta">Tours de Venta</string>
    <string name="title_activity_productos">ProductosActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="menu_alta_cn">Clientes</string>
    <string name="menu_zonaventa">Tours Venta</string>
    <string name="menu_productos">Productos</string>

    <string name="sin_datos">No datos.</string>

    <string name="progress_cargando_datos">Cargando datos&#8230;</string>

    <string name="title_activity_zona_venta">ZonaVentaActivity</string>
    <string name="title_activity_clientes">ClientesActivity</string>


    <string name="nombre_Cliente">Nombre</string>
    <string name="apellido_Ciente">Apellido</string>


    <string name="numZona">Numero de Zona</string>
    <string name="localidad">Nombre de la Localidad</string>
    <string name="campo_requerido">Campo requerido </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
