<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_cliente_nuevo"
        android:icon="@mipmap/ic_nuevo_cliente"
        android:title="@string/menu_alta_cn"
        app:showAsAction="always" />
    <item android:id="@+id/menu_zona_ventas"
        android:icon="@drawable/ic_zona_ventas"
        android:title="@string/menu_zonaventa"
        app:showAsAction="never"/>
    <item android:id="@+id/menuproductos"
        android:icon="@drawable/ic_productos"
        android:title="@string/menu_productos"
        app:showAsAction="never"/>
</menu>