<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DrawerActivity"
    tools:showIn="@layout/app_bar_drawer"
    android:background="@drawable/degradado">

    <ImageView
        android:id="@+id/imageCustomer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/textViewCustomerControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewCustomerControl"
        android:textColor="@color/errorColor"
        android:textColorHint="@color/errorColor"
        android:textColorLink="@color/errorColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCustomer"
        tools:textColorHint="@color/errorColor"
        tools:textSize="24sp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/textViewClienteNuevo"
        android:layout_width="109dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/textViewNuevoTour"
        android:textColor="@color/errorColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustomerControl" />


    <TextView
        android:id="@+id/textViewZonaVenta"
        android:layout_width="110dp"
        android:layout_height="29dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="20dp"
        android:text="@string/textViewZonaVenta"
        android:textColor="@color/errorColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewClienteNuevo"
        tools:textColor="@color/errorColor" />
    <RadioGroup
        android:id="@+id/radioGroupClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/textViewClienteNuevo"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustomerControl">

        <RadioButton
            android:id="@+id/radioButtonClienteNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toEndOf="@+id/textViewClienteNuevo"
            app:layout_constraintTop_toBottomOf="@+id/textViewCustomerControl" />

        <RadioButton
            android:id="@+id/radioButtonToursventas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.283"
            app:layout_constraintStart_toEndOf="@+id/textViewZonaVenta"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonClienteNuevo" />
    </RadioGroup>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/holo_green_light"
        android:text="OK"
        android:textColor="@color/errorColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewZonaVenta"
        tools:background="@color/btnEnter"
        tools:text="OK" />


</android.support.constraint.ConstraintLayout>